syntax = "proto3";

option java_multiple_files = true;
option java_package = "AirConditioningService";
option java_outer_classname = "SmartHotelRoomImpl";

package AirConService;

// Interface exported by the server.
service AirConService {

  rpc AirCon_turnOn (AirCon_turnOnRequest) returns (AirCon_turnOnReply) {}
  rpc AirCon_turnUp (AirCon_turnUpRequest) returns (AirCon_turnUpReply) {}
  rpc AirCon_turnDown (AirCon_turnDownRequest) returns (AirCon_turnDownReply){}
}

message AirCon_turnOnRequest {
  string text = 1;
}

message AirCon_turnOnReply {
  string text = 1;
}

message AirCon_turnUpRequest {
  string text = 1;
}

message AirCon_turnUpReply {
  string text = 1;
}

message AirCon_turnDownRequest {
  string text = 1;
}

message AirCon_turnDownReply {
  string text = 1;
}