syntax = "proto3";

option java_multiple_files = true;
option java_package = "PowerService";
option java_outer_classname = "SmartHotelRoomImpl";

package PowerService;

// Interface exported by the server.
service PowerService {

  rpc Power_turnOn (Power_turnOnRequest) returns (Power_turnOnReply) {}
  rpc Power_turnOff (Power_turnOffRequest) returns (Power_turnOffReply) {}
  rpc Power_cardWarning ( Power_cardWarningRequest) returns (Power_cardWarningReply){}
}

message Power_turnOnRequest {
  string text = 1;
}

message Power_turnOnReply {
  int32 length = 1;
}

message Power_turnOffRequest {
  string text = 1;
}

message Power_turnOffReply {
  int32 length = 1;
}

message Power_cardWarningRequest {
  string text = 1;
}

message Power_cardWarningReply {
  int32 length = 1;
}